# claude-negative-skills

./: README.md  api.py  compiler.py  main.py  pyproject.toml  requirements.txt
src/negative_skills/: compiler.py  interviewer.py  main.py  mcp_server.py
src/negative_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html  result.html
